# Projet-C

./: README.md  main.c  selim.c
maquettes/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet-c.glade  projet-c.glade.bak  projet-c.gladep
maquettes/autom4te.cache/: output.1  requests  traces.0  traces.1
maquettes/po/: Makefile  Makefile.in
maquettes/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  clients.txt  fonction.c  fonction.h  interface.c  interface.c.bak  interface.h.bak  interfaceClient.c  interfaceClient.h  main.c  paiementsejours.txt  profile.c  profileclient.txt  projet-c  reclamation.txt  sejours.c  sejours.h  users.c  users.h  users.txt  usersC.txt  vols.c  vols.h
maquettes/src/.deps/: Hotels.Po  callbacks.Po  coordonnees.Po  cordsejours.Po  cordvoiture.Po  cordvol.Po  fonction.Po  hist_hotels.Po  interfaceClient.Po  profile.Po  rec.Po  sejours.Po  users.Po  voiture.Po  vols.Po
tachewassim/: Makefile  Makefile.in  config.status  configure.in  espaceclient.glade
tachewassim/autom4te.cache/: requests  traces.1
tachewassim/espaceclient !!!/: Makefile  Makefile.am  config.h  (+4 more)
tachewassim/espaceclient !!!/src/: Hotels.c  Hotels.h  Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  coordonnees.h  cordsejours.h  cordvoiture.c  cordvoiture.h  cordvol.h  espaceclient  hist_hotels.c  hotel.txt  interface.c.bak  paiementhotels.txt  rec.c  voiture.c  voiture.h  voiture.txt  vols.txt
tachewassim/espaceclient !!!/src/.deps/: callbacks.Po  cordvoiture.Po  cordvol.Po  profile.Po
(+31 files in other folders)
